[gd_scene load_steps=8 format=3 uid="uid://d0nye8m73fo4e"]

[ext_resource type="Theme" uid="uid://dpn7e8fm8s6rr" path="res://materials/buttonTheme.tres" id="1_65kbn"]
[ext_resource type="Script" uid="uid://dqpe6vup7dt7o" path="res://scripts/mainMenuScript.gd" id="1_qgd8p"]
[ext_resource type="Script" uid="uid://cfsdtix7unmaq" path="res://scripts/LobbyManager.gd" id="3_1i3ks"]

[sub_resource type="Gradient" id="Gradient_wtfab"]
colors = PackedColorArray(0, 0, 1, 1, 0, 1, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_65kbn"]
gradient = SubResource("Gradient_wtfab")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="Gradient" id="Gradient_1i3ks"]
offsets = PackedFloat32Array(0, 0.513514, 0.995495, 1)
colors = PackedColorArray(0, 0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ism2r"]
gradient = SubResource("Gradient_1i3ks")

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qgd8p")

[node name="MainBackGround" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_65kbn")

[node name="VBoxContainer" type="VBoxContainer" parent="MainBackGround"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_right = 0.7
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Play" type="Button" parent="MainBackGround/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_65kbn")
text = "Play"

[node name="Forest" type="Button" parent="MainBackGround/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_65kbn")
text = "Forest"

[node name="Credits" type="Button" parent="MainBackGround/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_65kbn")
text = "Credits"

[node name="CreditsText" type="RichTextLabel" parent="MainBackGround"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
text = "cyboy's grass pack
link: https://cuboy.itch.io/grasspackvol1"

[node name="LobbyBackGround" type="TextureRect" parent="MainBackGround"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_ism2r")

[node name="ScrollContainer" type="ScrollContainer" parent="MainBackGround/LobbyBackGround"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainBackGround/LobbyBackGround/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="LobbyJoin" type="Button" parent="MainBackGround/LobbyBackGround/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Lobby 1"

[node name="LobbyJoin2" type="Button" parent="MainBackGround/LobbyBackGround/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Pro Lobby
"

[node name="LobbyJoin3" type="Button" parent="MainBackGround/LobbyBackGround/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Alpha lobby"

[node name="LobbyJoin4" type="Button" parent="MainBackGround/LobbyBackGround/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "noob lobby"

[node name="LobbyJoin5" type="Button" parent="MainBackGround/LobbyBackGround/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "girls only loby"

[node name="LobbyJoin6" type="Button" parent="MainBackGround/LobbyBackGround/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "lobby 2"

[node name="CreatePrivateLobby" type="Button" parent="MainBackGround/LobbyBackGround"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.9
anchor_right = 0.4
anchor_bottom = 0.99
grow_horizontal = 2
grow_vertical = 2
text = "Private Lobby"

[node name="CreatePublicLobby" type="Button" parent="MainBackGround/LobbyBackGround"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.9
anchor_right = 0.9
anchor_bottom = 0.99
grow_horizontal = 2
grow_vertical = 2
text = "Public Lobby"

[node name="Close" type="Button" parent="MainBackGround/LobbyBackGround"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -18.0
offset_bottom = 31.0
grow_horizontal = 0
text = "X"

[node name="refresh" type="Button" parent="MainBackGround/LobbyBackGround"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "refresh"

[node name="LobbyManager" type="Node" parent="."]
script = ExtResource("3_1i3ks")

[connection signal="pressed" from="MainBackGround/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainBackGround/VBoxContainer/Forest" to="." method="_on_forest_pressed"]
[connection signal="pressed" from="MainBackGround/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
